Fixing canvas size, scrollbar style and added example animations

--- a/src/styles/_animate.scss
+++ b/src/styles/_animate.scss
@@ -7,3 +7,21 @@
         box-shadow: inset 0 0 0 2px #00BAFF;
     }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgba(0,0,0,0);
+  -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: rgba(0,0,0,0.5);
+  -webkit-border-radius: 100px;
+  background-clip: padding-box;
+  border: 2px solid rgba(0, 0, 0, 0);
+  min-height: 10px;
+}
