--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,4 +9,5 @@ body {
     padding: 30px 10px 10px 10px;
     user-select: none;
     font-family: sans-serif;
+    overflow: hidden;
 }
